aulway: add allbuses, allroutes
